feat: ユーザー登録

--- a/play-scala-seed/app/views/users.scala.html
+++ b/play-scala-seed/app/views/users.scala.html
@@ -1,8 +1,16 @@
-@(users: Seq[User])
+@(users: Seq[User])(implicit request: RequestHeader)
+@import views.html.helper.CSRF
 
 @main("Users") {
 <div>
   <div id="users">
+    <h1>Create User here:</h1>
+    <form action="/users" method="POST">
+      @CSRF.formField
+      <input name="name" type="text" placeholder="name" />
+      <input name="age" type="number" placeholder="age" />
+      <input type="submit" />
+    </form>
     <h1>Users</h1>
     <table>
       <tr>
